<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="listener"
            type="cn.com.tcsl.uidesign.ui.Setp2Listner" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="Preferred date"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date1"
            style="@style/Widget.DateTime"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:onClick="@{listener::onDateSelected}"
            android:text="@string/prefer_date_today"
            app:layout_constraintEnd_toStartOf="@+id/tv_date2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_date"
            app:spanOffset="@{2}" />

        <TextView
            android:id="@+id/tv_date2"
            style="@style/Widget.DateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{listener::onDateSelected}"
            android:text="@string/prefered_date_tomorrow"
            app:layout_constraintBottom_toBottomOf="@+id/tv_date1"
            app:layout_constraintEnd_toStartOf="@+id/tv_date3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_date1"
            app:layout_constraintTop_toTopOf="@+id/tv_date1"
            app:spanOffset="@{2}" />

        <TextView
            android:id="@+id/tv_date3"
            style="@style/Widget.DateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="@{listener::onDateSelected}"
            android:text="@string/prefered_date_tuesday"
            app:layout_constraintBottom_toBottomOf="@+id/tv_date2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_date2"
            app:layout_constraintTop_toTopOf="@+id/tv_date2"
            app:spanOffset="@{2}" />

        <TextView
            android:id="@+id/tv_label_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="Preferred time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date1" />

        <TextView
            android:id="@+id/tv_time1"
            style="@style/Widget.DateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:onClick="@{listener::onTimeSelected}"
            android:text="@string/prefered_time_12"
            app:layout_constraintEnd_toStartOf="@+id/tv_time2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_time"
            app:spanOffset="@{3}" />

        <TextView
            android:id="@+id/tv_time2"
            style="@style/Widget.DateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{listener::onTimeSelected}"
            android:text="@string/prefered_time_23"
            app:layout_constraintBottom_toBottomOf="@+id/tv_time1"
            app:layout_constraintEnd_toStartOf="@+id/tv_time3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_time1"
            app:layout_constraintTop_toTopOf="@+id/tv_time1"
            app:spanOffset="@{3}" />

        <TextView
            android:id="@+id/tv_time3"
            style="@style/Widget.DateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="@{listener::onTimeSelected}"
            android:text="@string/prefered_time_34"
            app:layout_constraintBottom_toBottomOf="@+id/tv_time2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_time2"
            app:layout_constraintTop_toTopOf="@+id/tv_time2"
            app:spanOffset="@{3}" />
    </android.support.constraint.ConstraintLayout>
</layout>